@@ -11,6 +11,21 @@ setReplaceMethod("CB", signature(object="CNSet", value="matrix"),
 			 assayDataElementReplace(object, "CB", value)
 		 })
 
+
+
+setMethod("show", "CNSet", function(object){
+	callNextMethod(object)
+##	cat("emissionPr\n")
+##	cat("   array:", nrow(object), "features,", ncol(object), "samples,", dim(emissionPr(object))[3], "states\n")
+##	cat("   hidden states:\n")
+##	cat("      ", dimnames(emissionPr(object))[[3]], "\n")
+##	cat("   Missing values:", sum(is.na(emissionPr(object))), "\n")
+##	if(!all(is.na(emissionPr(object)))){
+##		cat("   minimum value:", min(emissionPr(object), na.rm=TRUE), "\n")
+##	} else  cat("   minimum value: NA (all missing)\n")
+##	cat("rangedData:  ")
+##	cat("    ", show(rangedData(object)), "\n")
+})
 ##setMethod("rangedData", "CNSet", function(object) segmentData(object))
 ##setReplaceMethod("rangedData", c("CNSet", "RangedData"), function(object, value){
 ##	segmentData(object) <- value
@@ -27,21 +42,6 @@ setReplaceMethod("CB", signature(object="CNSet", value="matrix"),
 ##	object@emissionPr <- value
 ##	object
 ##})
-
-setMethod("show", "CNSet", function(object){
-	callNextMethod(object)
-##	cat("emissionPr\n")
-##	cat("   array:", nrow(object), "features,", ncol(object), "samples,", dim(emissionPr(object))[3], "states\n")
-##	cat("   hidden states:\n")
-##	cat("      ", dimnames(emissionPr(object))[[3]], "\n")
-##	cat("   Missing values:", sum(is.na(emissionPr(object))), "\n")
-##	if(!all(is.na(emissionPr(object)))){
-##		cat("   minimum value:", min(emissionPr(object), na.rm=TRUE), "\n")
-##	} else  cat("   minimum value: NA (all missing)\n")
-##	cat("rangedData:  ")
-##	cat("    ", show(rangedData(object)), "\n")
-})
-
 ##setMethod("start", "CNSet", function(x, ...) start(segmentData(x), ...))
 ##setMethod("end", "CNSet", function(x, ...) end(segmentData(x), ...))
 ##setMethod("width", "CNSet", function(x) width(segmentData(x)))
